RESOLVED FIXED274574
REGRESSION: (r276031) PremiereMax.com no longer loads properly
https://bugs.webkit.org/show_bug.cgi?id=274574
Summary REGRESSION: (r276031) PremiereMax.com no longer loads properly
Michael Saboff
Reported 2024-05-22 22:46:41 PDT
PremiereMax.com no longer loads properly on ToT. This was bisected to gttps://commits.webkit.org/276031@main. The change in 276031@main introduced an optimization where reading a non-BMP character that failed to match would allow advancing the character pointer two characters instead of one. That optimization has a bug that causes the problem here. Removing the optimization fixes the issue.
Attachments
Michael Saboff
Comment 1 2024-05-22 22:47:07 PDT
Michael Saboff
Comment 2 2024-05-22 22:56:13 PDT
EWS
Comment 3 2024-05-23 09:50:14 PDT
Committed 279209@main (a8e4fcd2924b): <https://commits.webkit.org/279209@main> Reviewed commits have been landed. Closing PR #28973 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.